--- a/nrgHacks.html
+++ b/nrgHacks.html
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="row">
                 <div class="desc-col-1">
-                    <img src="Images/aboutme.jpg" alt="Description Image">
+                    <img src="https://miro.medium.com/v2/resize:fit:1228/0*9_ABySaVr9kLKcM6.png" alt="Description Image">
                 </div>
                 <div class="desc-col-2">
                     <h1 class="subtitle">Description</h1>
