--- a/nrgHacks.html
+++ b/nrgHacks.html
@@ -12,7 +12,7 @@
     <div id="home">
         <div class="container">
             <nav>
-                <img src="" alt="logo" class="logo">
+                <img src="logo.png" alt="logo" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#description">Description</a></li>
