--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="home">
         <div class="container">
             <nav>
-                <img src="logo.png" alt="logo" class="logo">
+                <img src="" alt="logo" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#description">Description</a></li>
@@ -81,27 +81,20 @@
             <h1 class="subtitle">Downloads</h1>
             <div class="download-list">
                 <div class="download">
-                    <img src="Images/work1.jpg" alt="thoth">
+                    <img src="Images/work1.jpg" alt="Python Script">
                     <div class="layer">
                         <h3>Python Script</h3>
                         <p>This is the python script that runs all of the quiz's functions.</p>
-                        <a href="#" download><i class="fa-solid fa-download"></i></a>
+                        <a href="https://gbehsuw.github.io/nrgQuiz/main.py" download = "Python File"><i class="fa-solid fa-download"></i></a>
                     </div>
                 </div>
+                
                 <div class="download">
-                    <img src="Images/work2.jpg" alt="thoth">
+                    <img src="Images/work3.jpg" alt="Github">
                     <div class="layer">
-                        <h3>Example Question File</h3>
-                        <p>This is a template question file that you can change to match your own questions.</p>
-                        <a href="#" download><i class="fa-solid fa-download"></i></a>
-                    </div>
-                </div>
-                <div class="download">
-                    <img src="Images/work3.jpg" alt="thoth">
-                    <div class="layer">
-                        <h3>Example Answer File</h3>
-                        <p>This is a template answer file that you can change to match your own answers.</p>
-                        <a href="#" download><i class="fa-solid fa-download"></i></a>
+                        <h3>Github Link</h3>
+                        <p>Access all the necessary files.</p>
+                        <a href="https://github.com/gbehsuw/nrgQuiz" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></i></a>
                     </div>
                 </div>
             </div>
