--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="home">
         <div class="container">
             <nav>
-                <img src="logo.png" alt="logo" class="logo" style="height = 10%;">
+                <img src="logo.png" alt="logo" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#description">Description</a></li>
