--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h1 class="subtitle">Downloads</h1>
             <div class="download-list">
                 <div class="download">
-                    <img src="Images/work1.jpg" alt="Python Script">
+                    <img src="New Piskel (2).png" alt="Python Script">
                     <div class="layer">
                         <h3>Python Script</h3>
                         <p>This is the python script that runs all of the quiz's functions.</p>
