--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 
                 <div class="download">
-                    <img src="Images/work3.jpg" alt="Github">
+                    <img src="gitLogo.png" alt="Github">
                     <div class="layer">
                         <h3>Github Link</h3>
                         <p>Access all the necessary files.</p>
