--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="layer">
                         <h3>Python Script</h3>
                         <p>This is the python script that runs all of the quiz's functions.</p>
-                        <a href="https://gbehsuw.github.io/nrgQuiz/main.py" download = "Python File"><i class="fa-solid fa-download"></i></a>
+                        <a href="https://gbehsuw.github.io/nrgQuiz/working.py" download = "Python File"><i class="fa-solid fa-download"></i></a>
                     </div>
                 </div>
                 
